add getContinents.qgl and component

--- a/client/codegen.yml
+++ b/client/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: "http://localhost:4000"
+schema: "https://countries.nausicaa.wilders.dev/"
 documents: "**/*.{gql,graphql}"
 generates:
   ./src/gql/generated/schema.ts:
